@@ -53,6 +53,12 @@ picking your way through this list.
 <h2>The checklist</h2>
 
 <pre>
+3.5.8.0                    Xyz XY
+
+     - It is no longer necessary to keep a log of changes to the upstream
+       sources in the copyright file. Instead, all such changes should be
+       documented in the changelog file. [13.7]
+
 3.5.7.0                    Aug 02
 
      - Packages no longer have to ask permission to call MAKEDEV in
