@@ -5,6 +5,8 @@ debian-policy (3.5.8.0) unstable; urgency=low
   * Add the modifications about base system, as opposed to the soon to be
     obsolete base section (I assume it is)                   closes: Bug#53582
   * Rearranged the virtual packages list.                    closes: bug#72980
+  * Removed the obsolete notion of documenting changes within the copyright
+    file, closes: #65764.
 
  --
 
